# rss-fetch-py

./: .gitignore  Dockerfile  data.json  docker-compose.yml  pyproject.toml  readme.md  sample.env
src/: __init__.py  __main__.py  models.py  scrape.py
